--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,15 @@
   margin: 0 auto;
   text-align: center;
 }
-html{
+html {
   height: 100%;
+}
+body {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none;
+}
+body ::-webkit-scrollbar {
+  display: none;
 }
 #cards {
   display: flex;
@@ -13,6 +20,27 @@ html{
 
 #cards:hover > .card::after {
   opacity: 1;
+}
+
+/* MultiSelect CSS */
+.searchBox {
+  border: none;
+  padding: 2%;
+  font-size: 15px;
+}
+
+.chips {
+  background: red;
+}
+.optionContainer {
+  color: white;
+  border-right: 1px solid;
+  border-left: 1px solid;
+  border-bottom: 1px solid;
+  background-color: black;
+}
+.option {
+  color: white;
 }
 
 .card {
